--- a/IKitaplik.BlazorUI/Components/App.razor
+++ b/IKitaplik.BlazorUI/Components/App.razor
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
-
+<html lang="tr">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="@Assets["_content/MudBlazor/MudBlazor.min.css"]" rel="stylesheet" />
     <ImportMap />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="/images/ikitaplık.png" />
     <HeadOutlet  @rendermode="new InteractiveServerRenderMode()"/>
+    <PageTitle>IKitaplik</PageTitle>
 </head>
 
 <body>
