--- a/IKitaplik.BlazorUI/Components/Layout/MainLayout.razor
+++ b/IKitaplik.BlazorUI/Components/Layout/MainLayout.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager NavigationManager
 @inject IAuthService AuthService
 @attribute [StreamRendering]
+<PageTitle>IKitaplik</PageTitle>
 
 @if (isLoading)
 {
